force-app/main/default/objects/Booking_Details__c/Booking_Details__c.object-meta.xml
<CustomObject>
    <description>This object Holds the booking details of the House DMO and Tentat  details and Rental Span for Rental Booking</description>
    <label>Booking Details</label>
    <nameField>
        <label>Booking Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>