force-app/main/default/objects/Booking_Details__c/fields/House_Address__c.field-meta.xml
<CustomField>
    <fullName>House_Address__c</fullName>
    <label>House Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>