force-app/main/default/objects/Booking_Details__c/fields/Idle_Days__c.field-meta.xml
<CustomField>
    <fullName>Idle_Days__c</fullName>
    <formula>Rental_Start_Date__c - Tenant_Person__r.EmployeeJoiningDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idle Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>