force-app/main/default/objects/Booking_Details__c/fields/Istemporaryallocationneeded__c.field-meta.xml
<CustomField>
    <fullName>Istemporaryallocationneeded__c</fullName>
    <description>This forumla used to understand if the user requires a temporary accomodation</description>
    <formula>IF(
  AND(
    Rental_Start_Date__c - Tenant_Person__r.EmployeeJoiningDate__c &gt;= 1,
    Rental_Start_Date__c - Tenant_Person__r.EmployeeJoiningDate__c &lt;= 20
  ),
  TRUE,
  FALSE
)</formula>
    <inlineHelpText>This forumla used to understand if the user requires a temporary accomodation</inlineHelpText>
    <label>Is temporary allocation needed</label>
    <type>Checkbox</type>
</CustomField>