force-app/main/default/objects/Booking_Details__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <label>Payment Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>