force-app/main/default/objects/Booking_Details__c/fields/Rental_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_End_Date__c</fullName>
    <label>Rental End Date</label>
    <type>Date</type>
</CustomField>