force-app/main/default/objects/Booking_Details__c/fields/Tenant_Person__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Person__c</fullName>
    <description>This field holds the employee who will be tenant of this house.</description>
    <inlineHelpText>This field holds the employee who will be tenant of this house.</inlineHelpText>
    <label>Tenant Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Booking Details</relationshipLabel>
    <relationshipName>Booking_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>