force-app/main/default/objects/Booking_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>House_Number__c</columns>
    <columns>House_Address__c</columns>
    <columns>Rental_Start_Date__c</columns>
    <columns>Rental_End_Date__c</columns>
    <columns>Payment_Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>